Scrollbar color fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@
     }
     
     ::-webkit-scrollbar-track {
-        @apply bg-gray-700;
+        @apply dark:bg-gray-700 bg-white;
     }
     
     ::-webkit-scrollbar-thumb {
